--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Yikai LIAO"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Yikai LIAO"
 description              : &description "personal description"
 url                      : https://Yikai-Liao.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Yikai Liao"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Singapore"
+  employer         : "Nanyang Technological University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "yikai003@e.ntu.edu.sg" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
